# ecoframe

./: .gitignore  README.md  pyproject.toml
src/ecoframe/: __init__.py  agent.py  ecology.py  env_proxy.py  env_server.py  environment.py  field.py  meta_env.py  protocol.py  signal.py  training_engine.py
src/ecoframe/backends/: __init__.py  local.py  mock.py  nats_backend.py
tests/: test_distributed_field.py  test_env_proxy.py  test_field.py  test_hardware_spec.py  test_meta_env.py  test_protocol.py  test_signal.py  test_training_engine.py
